pickle and unpickle embedding

--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -136,9 +136,10 @@
         "from sklearn.metrics.pairwise import cosine_similarity\n",
         "from sklearn.neighbors import NearestNeighbors as nn\n",
         "from matplotlib import pylab\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import pickle"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +164,7 @@
       "source": [
         "print(tf.__version__) #  check what version of TF is imported"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +202,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +241,7 @@
       "source": [
         "cd '/content/drive/My Drive/Colab Notebooks/'"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,7 +315,7 @@
       "source": [
         "n_samples, V"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -345,7 +346,7 @@
         "# example of how word to integer mapping looks like in the tokenizer\n",
         "print(list((tokenizer.word_index.items()))[:5])"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -382,6 +383,10 @@
         "def save_embeddings(model, model_name):\n",
         "  weights = model.get_weights()\n",
         "  embedding = weights[0]\n",
+        "\n",
+        "  path= './embedding_{}.pth'.format(model_name)\n",
+        "  pickle.dump(embedding, open(path,'wb'))\n",
+        "\n",
         "  f = open(model_name + '.txt', 'w')\n",
         "  f.write(\" \".join([str(V-1), str(dim)]))\n",
         "  f.write(\"\\n\")\n",
@@ -392,6 +397,24 @@
         "    f.write(\" \".join(map(str, list(embedding[i,:]))))\n",
         "    f.write(\"\\n\")\n",
         "  f.close()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rHZszMCbR0f8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# To load the pickled embedding\n",
+        "def unpickle(model_name):\n",
+        "  path = './embedding_{}.pth'.format(model_name)\n",
+        "  unpickled_embedding = pickle.load(open(path,'rb'))\n",
+        "  open(path,'rb').close()\n",
+        "  return unpicked_embedding"
       ],
       "execution_count": 0,
       "outputs": []
@@ -508,7 +531,7 @@
       "source": [
         "x_skipgram.shape, y_skipgram.shape"
       ],
-      "execution_count": 53,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -587,7 +610,7 @@
         "skipgram50 = skipgram_architechture(dim)\n",
         "skipgram50.summary()"
       ],
-      "execution_count": 56,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -637,7 +660,7 @@
         "skipgram50.fit(x_skipgram, y_skipgram, batch_size=64, epochs=10)\n",
         "save_embeddings(skipgram50, 'skipgram_50')"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -682,11 +705,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "eGEHlkQ4DShO",
+        "outputId": "5c89a5a0-70a7-48fd-a131-9d1b87290eab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 612
-        },
-        "outputId": "5c89a5a0-70a7-48fd-a131-9d1b87290eab"
+        }
       },
       "source": [
         "# save embeddings for vectors of length 50, 150 and 300 using skipgram model\n",
@@ -696,7 +719,7 @@
         "skipgram150.fit(x_skipgram, y_skipgram, batch_size=64, epochs=10)\n",
         "#save_embeddings(skipgram150, 'skipgram_150')\n"
       ],
-      "execution_count": 61,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -767,11 +790,11 @@
       "metadata": {
         "id": "U0ahwbVAFOUU",
         "colab_type": "code",
+        "outputId": "5214f63c-e214-414d-81f0-92213b06a44e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 357
-        },
-        "outputId": "5214f63c-e214-414d-81f0-92213b06a44e"
+        }
       },
       "source": [
         "dim = 300\n",
@@ -779,7 +802,7 @@
         "skipgram300.fit(x_skipgram, y_skipgram, batch_size=32, epochs=10)\n",
         "save_embeddings(skipgram300, 'skipgram_300')"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -997,16 +1020,16 @@
       "metadata": {
         "id": "GFiw8wiAiUo8",
         "colab_type": "code",
+        "outputId": "8a64d2c2-e682-4552-f68f-3866c7f47fb1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        },
-        "outputId": "8a64d2c2-e682-4552-f68f-3866c7f47fb1"
+        }
       },
       "source": [
         "cbow.summary()"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1035,17 +1058,17 @@
       "metadata": {
         "id": "9qoQ_z3XiW2G",
         "colab_type": "code",
+        "outputId": "b3c42770-2b50-4049-9e31-23cb50ce23b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
-        },
-        "outputId": "b3c42770-2b50-4049-9e31-23cb50ce23b6"
+        }
       },
       "source": [
         "# train skipgram model\n",
         "cbow.fit(x, y, batch_size=64, epochs=10, verbose=1)"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1354,17 +1377,17 @@
       "metadata": {
         "id": "ofqkCZK2ZxAu",
         "colab_type": "code",
+        "outputId": "313afe6e-ac5c-4e49-9c34-3fd3fcad466d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        },
-        "outputId": "313afe6e-ac5c-4e49-9c34-3fd3fcad466d"
+        }
       },
       "source": [
         "embedding = get_embedding_from_file('skipgram_50')\n",
         "embed('king', embedding)"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
