clean code of 1.3

--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -1452,113 +1452,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "z3F4TwToLPjk",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def analogy(word1, word2, word3, word4):\n",
-        "\n",
-        "  analogy = word2 + ' is to ' + word1 + ' as ' + word3 + ' is to?'\n",
-        "  df = pd.DataFrame(columns=['Analogy task', 'True word(sim1)', 'Predicted word(sim2)', 'Embedding', 'Correct?'])\n",
-        "  models = ['new_skipgram_50', 'new_skipgram_150', 'new_skipgram_300', 'new_cbow_50', 'new_cbow_150', 'new_cbow_300']\n",
-        "  for i, model in enumerate(models):\n",
-        "    embedding = np.loadtxt(model + '.txt')\n",
-        "    predicted_embedding = embed(word1, embedding) - embed(word2, embedding) + embed(word3, embedding)\n",
-        "\n",
-        "    #predicted_word = closest_word(predicted_embedding)\n",
-        "    predicted_word = 'dummy_word'\n",
-        "    print(predicted_word)\n",
-        "    distance_exp_true = cosine_similarity(predicted_embedding, embed(word4, embedding))   #sim1\n",
-        "    print (distance_exp_true)\n",
-        "\n",
-        "    df.loc[i] = [analogy] + [word4] + [predicted_word] + [model] + [word4 == predicted_word]\n",
-        "\n",
-        "  return df"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9lHL1tWYg551",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "0fc23a8e-cb68-4a73-8291-13bf72f7ed14"
-      },
-      "source": [
-        "a = embed('man', embedding)\n",
-        "a.shape"
-      ],
-      "execution_count": 119,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(1, 50)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 119
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "OCdsCkBGhhRU",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 187
-        },
-        "outputId": "d1f995aa-01f3-47a2-fe25-29d91600d335"
-      },
-      "source": [
-        "embedding[0]\n",
-        "\n",
-        "# for \n",
-        "\n",
-        "# sim2 = distance (a, embedding(i, 50))\n",
-        "# i\n",
-        "# tokenizer[i] # get the word from the tokenizer"
-      ],
-      "execution_count": 136,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([-0.0398823 ,  0.03332901, -0.02663608,  0.02922193, -0.00336498,\n",
-              "       -0.01286868,  0.00112736, -0.04281056,  0.01286247,  0.03049264,\n",
-              "        0.03493273,  0.00739496, -0.0049053 ,  0.01308067,  0.04155295,\n",
-              "        0.00780834,  0.0437618 ,  0.00906766,  0.00459746, -0.01756672,\n",
-              "        0.01510359,  0.04161028, -0.00673286, -0.02064559,  0.0411265 ,\n",
-              "       -0.01088098,  0.01535538, -0.02112616,  0.00506145, -0.01325346,\n",
-              "       -0.00297026,  0.03371646, -0.01213523,  0.00638027,  0.0172087 ,\n",
-              "        0.00947716, -0.0264119 ,  0.00791616, -0.0123681 ,  0.02725321,\n",
-              "       -0.03248061,  0.01709486, -0.00785267,  0.04601231,  0.02038284,\n",
-              "       -0.03570449, -0.0461538 , -0.01794187,  0.02559073,  0.03970444])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 136
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yyizZNgIlG12",
+        "id": "ZAdMZSW7tJfQ",
         "colab_type": "code",
         "colab": {}
       },
@@ -1585,331 +1479,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0jsfj3QVp0ay",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "afaca6ea-b73f-4558-cc84-81b21304cb11"
-      },
-      "source": [
-        "embedding.shape[1]"
-      ],
-      "execution_count": 165,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "50"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 165
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "NumbjZ8Fnb9U",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 187
-        },
-        "outputId": "35445962-9ec6-4b1a-cf13-a3a9e7403f1c"
-      },
-      "source": [
-        "embedding[0]"
-      ],
-      "execution_count": 160,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([-0.0398823 ,  0.03332901, -0.02663608,  0.02922193, -0.00336498,\n",
-              "       -0.01286868,  0.00112736, -0.04281056,  0.01286247,  0.03049264,\n",
-              "        0.03493273,  0.00739496, -0.0049053 ,  0.01308067,  0.04155295,\n",
-              "        0.00780834,  0.0437618 ,  0.00906766,  0.00459746, -0.01756672,\n",
-              "        0.01510359,  0.04161028, -0.00673286, -0.02064559,  0.0411265 ,\n",
-              "       -0.01088098,  0.01535538, -0.02112616,  0.00506145, -0.01325346,\n",
-              "       -0.00297026,  0.03371646, -0.01213523,  0.00638027,  0.0172087 ,\n",
-              "        0.00947716, -0.0264119 ,  0.00791616, -0.0123681 ,  0.02725321,\n",
-              "       -0.03248061,  0.01709486, -0.00785267,  0.04601231,  0.02038284,\n",
-              "       -0.03570449, -0.0461538 , -0.01794187,  0.02559073,  0.03970444])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 160
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mQDTY8KPqOSX",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 187
-        },
-        "outputId": "84a0786c-e68b-4904-cce9-90704afad9b4"
-      },
-      "source": [
-        "embedding = embedding[0].reshape(1,50)"
-      ],
-      "execution_count": 159,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[-0.0398823 ,  0.03332901, -0.02663608,  0.02922193, -0.00336498,\n",
-              "        -0.01286868,  0.00112736, -0.04281056,  0.01286247,  0.03049264,\n",
-              "         0.03493273,  0.00739496, -0.0049053 ,  0.01308067,  0.04155295,\n",
-              "         0.00780834,  0.0437618 ,  0.00906766,  0.00459746, -0.01756672,\n",
-              "         0.01510359,  0.04161028, -0.00673286, -0.02064559,  0.0411265 ,\n",
-              "        -0.01088098,  0.01535538, -0.02112616,  0.00506145, -0.01325346,\n",
-              "        -0.00297026,  0.03371646, -0.01213523,  0.00638027,  0.0172087 ,\n",
-              "         0.00947716, -0.0264119 ,  0.00791616, -0.0123681 ,  0.02725321,\n",
-              "        -0.03248061,  0.01709486, -0.00785267,  0.04601231,  0.02038284,\n",
-              "        -0.03570449, -0.0461538 , -0.01794187,  0.02559073,  0.03970444]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 159
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "z8xCxN2gqg2i",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "3402b53d-b6f8-444f-d6f4-b8167c19d5d9"
-      },
-      "source": [
-        "embedding[0].shape"
-      ],
-      "execution_count": 161,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(50,)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 161
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mqBbx77xpjzy",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "fb087481-3b6b-4c80-feb2-b9965affc9c9"
-      },
-      "source": [
-        "aa.shape"
-      ],
-      "execution_count": 167,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(1, 300)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 167
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZHt7zW50pMg_",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 283
-        },
-        "outputId": "2e3326bc-798f-423d-c491-e89d228b164f"
-      },
-      "source": [
-        "closest_word(aa)"
-      ],
-      "execution_count": 164,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-164-bc123e351699>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mclosest_word\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maa\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-163-4ba2caf07b75>\u001b[0m in \u001b[0;36mclosest_word\u001b[0;34m(predicted_embedding)\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mV\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0meach_word\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0membedding\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0meach_word\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meach_word\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mdist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcosine_similarity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredicted_embedding\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meach_word\u001b[0m\u001b[0;34m)\u001b[0m   \u001b[0;31m#sim1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdist\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mleast_dist\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 300 into shape (1,50)"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "juj-4W5dkOWr",
+        "id": "z3F4TwToLPjk",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "mylist = list((tokenizer.word_index.items()))"
+        "def analogy(word1, word2, word3, true_word):\n",
+        "\n",
+        "  analogy = word2 + ' is to ' + word1 + ' as ' + word3 + ' is to?'\n",
+        "  df = pd.DataFrame(columns=['Analogy task', 'True word(sim1)', 'Predicted word(sim2)', 'Embedding', 'Correct?'])\n",
+        "  models = ['new_skipgram_50', 'new_skipgram_150', 'new_skipgram_300', 'new_cbow_50', 'new_cbow_150', 'new_cbow_300']\n",
+        "  for i, model in enumerate(models):\n",
+        "    embedding = np.loadtxt(model + '.txt')\n",
+        "    predicted_embedding = embed(word1, embedding) - embed(word2, embedding) + embed(word3, embedding)\n",
+        "\n",
+        "    predicted_word = closest_word(predicted_embedding)\n",
+        "    \n",
+        "    predicted_word = 'dummy_word'\n",
+        "    \n",
+        "    distance_exp_true = cosine_similarity(predicted_embedding, embed(true_word, embedding))   #sim2\n",
+        "\n",
+        "    df.loc[i] = [analogy] + [word4] + [predicted_word] + [model] + [word4 == predicted_word]\n",
+        "\n",
+        "  return df"
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "O2tu3vLkjYmP",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "5056be87-c041-4a9d-cd52-ce09957dd22d"
-      },
-      "source": [
-        "print(list(mylist)[:5])"
-      ],
-      "execution_count": 130,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[('the', 1), ('and', 2), ('to', 3), ('a', 4), ('it', 5)]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5MDpT7uekIya",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "42dd1262-a822-4e37-bbcb-d5253448ca8a"
-      },
-      "source": [
-        "[item[0] for item in mylist if item[1] == i]"
-      ],
-      "execution_count": 133,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['the']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 133
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "aLL6av4ykI-6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "K2Ohq3izkJJc",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "VrQA0EhNHIy4",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 221
-        },
-        "outputId": "72fa311d-0213-42ad-fbb5-a9a757539476"
-      },
-      "source": [
-        "# queen is to king as woman is to man\n",
-        "aa = analogy('king', 'queen', 'woman', 'man')"
-      ],
-      "execution_count": 170,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "dummy_word\n",
-            "[[0.27470608]]\n",
-            "dummy_word\n",
-            "[[0.05237085]]\n",
-            "dummy_word\n",
-            "[[0.15938019]]\n",
-            "dummy_word\n",
-            "[[-0.05500198]]\n",
-            "dummy_word\n",
-            "[[0.03122723]]\n",
-            "dummy_word\n",
-            "[[-0.05183273]]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -2063,32 +1658,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7MSYD4pTsCqZ",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "f478d494-d392-42c9-b560-a0d584a22982"
-      },
-      "source": [
-        "!git status"
-      ],
-      "execution_count": 171,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "fatal: not a git repository (or any parent up to mount point /content)\n",
-            "Stopping at filesystem boundary (GIT_DISCOVERY_ACROSS_FILESYSTEM not set).\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     }
   ]
 }
