--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -112,7 +112,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "vCnATRPgBZEd",
-        "colab": {}
+        "outputId": "1ad8ff11-e9e8-4556-ae46-868e0a223e3f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "import numpy as np\n",
@@ -134,8 +138,16 @@
         "from matplotlib import pylab\n",
         "import pandas as pd"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -179,7 +191,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "DdjNeehKBd-a",
-        "outputId": "6d49ab0b-01bc-403e-f652-bbb1d3866846",
+        "outputId": "d9fe10c7-0d98-4ece-da0d-3ee19d9ee7f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -189,7 +201,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 60,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +227,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "iS0-uINUBfic",
-        "outputId": "0977faec-2833-453b-e1b0-95d9534d4307",
+        "outputId": "b144b76e-d90e-4350-fc13-0047b197790b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -224,7 +236,7 @@
       "source": [
         "cd '/content/drive/My Drive/Colab Notebooks/'"
       ],
-      "execution_count": 61,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,7 +301,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "ILdA_IimBlte",
-        "outputId": "81f1625e-c6c9-4b6c-b43a-b2189593e0bb",
+        "outputId": "4cb59309-1a36-427d-f2af-4280735db505",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -298,7 +310,7 @@
       "source": [
         "n_samples, V"
       ],
-      "execution_count": 64,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -310,7 +322,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 64
+          "execution_count": 9
         }
       ]
     },
@@ -1459,7 +1471,7 @@
       "source": [
         "def closest_word(predicted_embedding):\n",
         "  embedding = np.loadtxt('new_cbow_300' + '.txt')\n",
-        "  features = embeddings.shape[1]\n",
+        "  features = embedding.shape[1]\n",
         "  least_dist = 100\n",
         "  index = 0\n",
         "  for i in range(V):  \n",
@@ -1489,22 +1501,162 @@
         "  analogy = word2 + ' is to ' + word1 + ' as ' + word3 + ' is to?'\n",
         "  df = pd.DataFrame(columns=['Analogy task', 'True word(sim1)', 'Predicted word(sim2)', 'Embedding', 'Correct?'])\n",
         "  models = ['new_skipgram_50', 'new_skipgram_150', 'new_skipgram_300', 'new_cbow_50', 'new_cbow_150', 'new_cbow_300']\n",
+        "\n",
+        "  dummy = []\n",
         "  for i, model in enumerate(models):\n",
         "    embedding = np.loadtxt(model + '.txt')\n",
+        "    print(embedding.shape)\n",
         "    predicted_embedding = embed(word1, embedding) - embed(word2, embedding) + embed(word3, embedding)\n",
-        "\n",
-        "    predicted_word = closest_word(predicted_embedding)\n",
+        "    \n",
+        "    print(predicted_embedding.shape)\n",
+        "    #predicted_word = closest_word(predicted_embedding)\n",
+        "    \n",
         "    \n",
         "    predicted_word = 'dummy_word'\n",
         "    \n",
         "    distance_exp_true = cosine_similarity(predicted_embedding, embed(true_word, embedding))   #sim2\n",
         "\n",
-        "    df.loc[i] = [analogy] + [word4] + [predicted_word] + [model] + [word4 == predicted_word]\n",
+        "    df.loc[i] = [analogy] + [true_word] + [predicted_word] + [model] + [true_word == predicted_word]\n",
         "\n",
         "  return df"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-uoXEYoFwgtK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 439
+        },
+        "outputId": "df05220d-23af-4d4a-f33a-3c9c853cc487"
+      },
+      "source": [
+        "analogy('king', 'queen', 'woman', 'man')"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(2557, 50)\n",
+            "(1, 50)\n",
+            "(2557, 150)\n",
+            "(1, 150)\n",
+            "(2557, 300)\n",
+            "(1, 300)\n",
+            "(2557, 50)\n",
+            "(1, 50)\n",
+            "(2557, 150)\n",
+            "(1, 150)\n",
+            "(2557, 300)\n",
+            "(1, 300)\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Analogy task</th>\n",
+              "      <th>True word(sim1)</th>\n",
+              "      <th>Predicted word(sim2)</th>\n",
+              "      <th>Embedding</th>\n",
+              "      <th>Correct?</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>queen is to king as woman is to?</td>\n",
+              "      <td>man</td>\n",
+              "      <td>dummy_word</td>\n",
+              "      <td>new_skipgram_50</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>queen is to king as woman is to?</td>\n",
+              "      <td>man</td>\n",
+              "      <td>dummy_word</td>\n",
+              "      <td>new_skipgram_150</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>queen is to king as woman is to?</td>\n",
+              "      <td>man</td>\n",
+              "      <td>dummy_word</td>\n",
+              "      <td>new_skipgram_300</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>queen is to king as woman is to?</td>\n",
+              "      <td>man</td>\n",
+              "      <td>dummy_word</td>\n",
+              "      <td>new_cbow_50</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>queen is to king as woman is to?</td>\n",
+              "      <td>man</td>\n",
+              "      <td>dummy_word</td>\n",
+              "      <td>new_cbow_150</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>queen is to king as woman is to?</td>\n",
+              "      <td>man</td>\n",
+              "      <td>dummy_word</td>\n",
+              "      <td>new_cbow_300</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                       Analogy task True word(sim1)  ...         Embedding Correct?\n",
+              "0  queen is to king as woman is to?             man  ...   new_skipgram_50    False\n",
+              "1  queen is to king as woman is to?             man  ...  new_skipgram_150    False\n",
+              "2  queen is to king as woman is to?             man  ...  new_skipgram_300    False\n",
+              "3  queen is to king as woman is to?             man  ...       new_cbow_50    False\n",
+              "4  queen is to king as woman is to?             man  ...      new_cbow_150    False\n",
+              "5  queen is to king as woman is to?             man  ...      new_cbow_300    False\n",
+              "\n",
+              "[6 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 41
+        }
+      ]
     },
     {
       "cell_type": "code",
